@@ -1,7 +1,7 @@
-study	label	plate_label	plate_barcode	row	column	dna_label	volume
-BSTUDY	P001.A01	P001	1234567	0	0	I001-dna-4	0.01
-BSTUDY	P001.A02	P001	1234567	0	1	I002-dna-4	0.02
-BSTUDY	P002.A03	P002	1234567	0	2	I003-dna-4	0.03
-BSTUDY	P003.A04	P003	1234567	0	3	I004-dna-4	0.04
-BSTUDY	P004.A05	P004	1234567	0	4	I005-dna-4	0.05
-BSTUDY	P004.A06	P005	1234567	0	5	I006-dna-4	0.06
+study	label	plate_label	row	column	dna_label	volume
+BSTUDY	P001.A00	P001	0	0	I001-dna-4	0.01
+BSTUDY	P001.A01	P001	0	1	I002-dna-4	0.02
+BSTUDY	P002.A02	P002	0	2	I003-dna-4	0.03
+BSTUDY	P003.A03	P003	0	3	I004-dna-4	0.04
+BSTUDY	P004.A04	P004	0	4	I005-dna-4	0.05
+BSTUDY	P004.A05	P004	0	5	I006-dna-4	0.06
